Fix filename wrapping with flexbox width trick

--- a/frontend/src/components/FilePreviewSide.css
+++ b/frontend/src/components/FilePreviewSide.css
@@ -160,6 +160,7 @@
 .file-details {
   flex: 1;
   min-width: 0;
+  width: 0;
 }
 
 .file-name {
